--- a/FlynnAssignment1/FlynnAssignment1.csproj
+++ b/FlynnAssignment1/FlynnAssignment1.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Helper\Priority.cs" />
     <Compile Include="Model\Classes.cs" />
     <Compile Include="Model\Course.cs" />
+    <Compile Include="Model\Task.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Output\PriorityOutput.cs" />
