--- a/FlynnAssignment1/FlynnAssignment1.csproj
+++ b/FlynnAssignment1/FlynnAssignment1.csproj
@@ -61,21 +61,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Controller\ClassesInformationController.cs" />
+    <Compile Include="View\DisplayedCourseInformation.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View\DisplayedCourseInformation.Designer.cs">
+      <DependentUpon>DisplayedCourseInformation.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\Priority.cs" />
-    <Compile Include="Model\Classes.cs" />
+    <Compile Include="Model\AllClasses.cs" />
     <Compile Include="Model\Course.cs" />
     <Compile Include="Model\Task.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Output\PriorityOutput.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="View\DisplayedCourseInformation.resx">
+      <DependentUpon>DisplayedCourseInformation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
