Fixed tab bug, revised task output and added preloaded task ability to library

--- a/FlynnAssignment1/FlynnAssignment1.csproj
+++ b/FlynnAssignment1/FlynnAssignment1.csproj
@@ -117,5 +117,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Datatier\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
